src/objects/Organisation__c.object
<CustomObject>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <label>Address 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_From__c</fullName>
        <label>Age From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_To__c</fullName>
        <label>Age To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Also_known_as__c</fullName>
        <label>Also Known As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_Address__c</fullName>
        <formula>IF(NOT(ISBLANK(Address_1__c)), Address_1__c, &quot;&quot;)
&amp; IF(NOT(ISBLANK(Address_2__c)), BR() &amp; Address_2__c, &quot;&quot;)
&amp; IF(NOT(ISBLANK(Address_3__c)), BR() &amp; Address_3__c, &quot;&quot;)
&amp; IF(NOT(ISBLANK(Town__c)), BR() &amp; Town__c, &quot;&quot;)
&amp; IF(NOT(ISBLANK( local_authority__r.Name  )), BR() &amp; local_authority__r.Name, &quot;&quot;)
&amp; IF(NOT(ISBLANK(County__c)), BR() &amp; County__c, &quot;&quot;)
&amp; IF(NOT(ISBLANK(Postcode__c)), BR() &amp; Postcode__c, &quot;&quot;)
&amp; IF(NOT(ISBLANK(Country__r.title__c)), BR() &amp; Country__r.title__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Collection_finished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Collection finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Text__c</fullName>
        <formula>Country__r.title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>organisations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Movement_Category__c</fullName>
        <label>Current Movement Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Visited_by_Ambassador__c</fullName>
        <description>Actual date the Ambassador has completed the visit to a school.</description>
        <inlineHelpText>Actual date the Ambassador has completed the visit to a school.</inlineHelpText>
        <label>Actual Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Visit__c</fullName>
        <description>The most current visit status for this school.</description>
        <formula>IF(NOT(ISBLANK(Date_Visited_by_Ambassador__c)),

&quot;Last visited &quot; &amp; TEXT(today() - Date_Visited_by_Ambassador__c) &amp; &quot; days ago&quot;,

IF(AND(
       NOT(ISBLANK( Visit_Start_Date_Time__c )),
       NOT(ISBLANK( Visit_End_Date_Time__c ))
       ),

&quot;Visit Scheduled on &quot; &amp; LEFT(TEXT(Visit_Start_Date_Time__c), 10) &amp; &apos; (&apos; &amp; Scheduled_Date_Start_Time__c &amp; &apos; to &apos; &amp; Scheduled_Date_End_Time__c &amp; &apos;)&apos;,

&quot;Not yet visited&quot;))</formula>
        <inlineHelpText>The most current visit status for this school.</inlineHelpText>
        <label>Visit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Campus__c</fullName>
        <label>Department/Campus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_gathering__c</fullName>
        <label>Description gathering</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <label>Faculty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer_Image__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Footer Image</label>
        <referenceTo>Organisation_Document__c</referenceTo>
        <relationshipName>organisations_footer_image</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funding_Group__c</fullName>
        <label>Funding Group</label>
        <picklist>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <picklist>
            <picklistValues>
                <fullName>Academy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Technology Colleges (CTCs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controlled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controlled Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant Aided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant Maintained Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEA Nursery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Academy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Maintained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roman Catholic Maintained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditional Academy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University Technical College (UTC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Aided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Controlled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GOR__c</fullName>
        <label>GOR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Mixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Girls</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Government_Office_Region__c</fullName>
        <description>Region of the Local Authority.</description>
        <formula>local_authority__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Region of the Local Authority.</inlineHelpText>
        <label>GOR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Image__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Header Image</label>
        <referenceTo>Organisation_Document__c</referenceTo>
        <relationshipName>organisation_header_image</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hex_colour__c</fullName>
        <label>Hex colour</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <formula>lat_long__Latitude__s</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logo_Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logo Image</label>
        <referenceTo>Organisation_Document__c</referenceTo>
        <relationshipName>organisations_logo_image</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <formula>lat_long__Longitude__s</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Share_Log_Count__c</fullName>
        <label>Market Share Log Count</label>
        <summaryForeignKey>Market_Share_Log__c.SD_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_Allocated_Region__c</fullName>
        <description>Region to be used to allocated Ambassadors, based on the GOR and/or the Local Authority.</description>
        <inlineHelpText>Region to be used to allocated Ambassadors, based on the GOR and/or the Local Authority.</inlineHelpText>
        <label>Allocated Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase_Formula__c</fullName>
        <formula>IF(Phase_Text__c = &apos;Early years,&apos;,&apos;Early years&apos;,
IF(Phase_Text__c = &apos;Further (Other),&apos;,&apos;Further&apos;,
IF(Phase_Text__c = &apos;Further 16+,&apos;,&apos;Further&apos;,
IF(Phase_Text__c = &apos;Sixth Form,&apos;,&apos;Further&apos;,
IF(Phase_Text__c = &apos;Further (Other), Higher,&apos;,&apos;Further/Higher&apos;,
IF(Phase_Text__c = &apos;Further 16+, Higher,&apos;,&apos;Further/Higher&apos;,
IF(Phase_Text__c = &apos;Higher,&apos;,&apos;Higher&apos;,
IF(Phase_Text__c = &apos;Early years, Middle, Secondary,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Early years, Middle, Sixth Form,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Early years, Primary, Middle,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Early years, Primary, Middle, Secondary,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Early years, Primary, Middle, Secondary, Sixth Form,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Early years, Primary, Secondary,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Early years, Primary, Secondary, Further (Other),&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Early years, Primary, Secondary, Further 16+,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Early years, Primary, Secondary, Sixth Form,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Early years, Primary, Secondary, Sixth Form, Multi-Phase,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Middle, Secondary,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Middle, Secondary, Sixth Form,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Multi-Phase,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Primary, Middle,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Primary, Middle, Further 16+,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Primary, Middle, Secondary,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Primary, Middle, Secondary, Further 16+,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Primary, Middle, Secondary, Sixth Form,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Primary, Secondary,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Primary, Secondary, Further (Other),&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Primary, Secondary, Further (Other), Higher,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Primary, Secondary, Further 16+,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Primary, Secondary, Sixth Form,&apos;,&apos;Multi-Phase&apos;,
IF(Phase_Text__c = &apos;Early years, Middle,&apos;,&apos;Primary&apos;,
IF(Phase_Text__c = &apos;Early years, Primary,&apos;,&apos;Primary&apos;,
IF(Phase_Text__c = &apos;Middle,&apos;,&apos;Primary&apos;,
IF(Phase_Text__c = &apos;Primary,&apos;,&apos;Primary&apos;,
IF(Phase_Text__c = &apos;Early years, Secondary,&apos;,&apos;Secondary&apos;,
IF(Phase_Text__c = &apos;Early years, Secondary, Sixth Form,&apos;,&apos;Secondary&apos;,
IF(Phase_Text__c = &apos;Secondary,&apos;,&apos;Secondary&apos;,
IF(Phase_Text__c = &apos;Secondary, Further (Other),&apos;,&apos;Secondary&apos;,
IF(Phase_Text__c = &apos;Secondary, Further 16+,&apos;,&apos;Secondary&apos;,
IF(Phase_Text__c = &apos;Secondary, Sixth Form,&apos;,&apos;Secondary&apos;,
&quot;&quot;))))))))))))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase_Text__c</fullName>
        <description>The text version of the Phase multi-select picklist.</description>
        <inlineHelpText>The text version of the Phase multi-select picklist.</inlineHelpText>
        <label>Phase Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Early years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sixth Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further 16+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Phase</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Phase_and_Funding_Group__c</fullName>
        <formula>IF( 
NOT(ISBLANK(TEXT(Funding_Group__c))), TEXT(Funding_Group__c) &amp; &quot; /&quot;, &quot;&quot;)
&amp;
IF(
INCLUDES(Phase__c, &quot;Early years&quot;),
&quot; Early years /&quot;,&quot;&quot;)
&amp;

 IF( 
INCLUDES(Phase__c, &quot;Primary&quot;),
&quot; Primary /&quot;, &quot;&quot;)
 &amp;

IF( 
INCLUDES(Phase__c, &quot;Middle&quot;),
&quot; Middle /&quot;, &quot;&quot;)
 &amp;

 IF( 
INCLUDES(Phase__c, &quot;Secondary&quot;),
&quot; Secondary /&quot;, &quot;&quot;)
 &amp;

 IF( 
INCLUDES(Phase__c, &quot;Sixth Form&quot;),
&quot; Sixth Form /&quot;, &quot;&quot;)
 &amp;

 IF( 
INCLUDES(Phase__c, &quot;Further 16+&quot;),
&quot; Further 16+ /&quot;, &quot;&quot;)
 &amp;

 IF( 
INCLUDES(Phase__c, &quot;Further (Other)&quot;),
&quot; Further (Other) /&quot;, &quot;&quot;)
 &amp;

 IF( 
INCLUDES(Phase__c, &quot;Higher&quot;),
&quot; Higher /&quot;, &quot;&quot;)
 &amp;
 
 IF( 
INCLUDES(Phase__c, &quot;Multi-Phase&quot;),
&quot; Multi-Phase /&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase and Funding Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>The priority for contacting clients based on their Market Share Log data.</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Very High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Very Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Religious_Denominiation__c</fullName>
        <label>Religious Denomination</label>
        <picklist>
            <picklistValues>
                <fullName>Does not apply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-denominational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inter-denominational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anglican</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baptist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Church in Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Church of England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Episcopalian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muslim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roman Catholic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seventh Day Adventist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sikh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Reformed Church</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date_End_Time__c</fullName>
        <label>Scheduled Date End Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date_Start_Time__c</fullName>
        <label>Scheduled Date Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Visit_Date__c</fullName>
        <description>Date the Ambassador is Scheduled to Visit the School.</description>
        <inlineHelpText>Date the Ambassador is Scheduled to Visit the School.</inlineHelpText>
        <label>Scheduled Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_to_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled to Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Id_Text__c</fullName>
        <formula>TEXT( School_Id__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Id__c</fullName>
        <externalId>true</externalId>
        <label>School Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>School_Type__c</fullName>
        <label>School Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mainstream School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Needs School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Maintained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pupil Referral Unit(PRU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secure Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed to open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed to close</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strapline__c</fullName>
        <label>Strapline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Town__c</fullName>
        <label>Town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_End_Date_Time__c</fullName>
        <description>The End Date/Time of the latest visit to this school.</description>
        <inlineHelpText>The End Date/Time of the latest visit to this school.</inlineHelpText>
        <label>Visit End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Visit_Start_Date_Time__c</fullName>
        <description>The Start Date/Time of the latest visit to this school.</description>
        <inlineHelpText>The Start Date/Time of the latest visit to this school.</inlineHelpText>
        <label>Visit Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Visited_by_Ambassador__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visited by Ambassador</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volumes_YTD__c</fullName>
        <label>Volumes YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>display_local_authority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Display Local Authority</label>
        <referenceTo>Local_Authority__c</referenceTo>
        <relationshipLabel>Organisations (display local authority)</relationshipLabel>
        <relationshipName>organisations_display</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lat_long__c</fullName>
        <label>Lat/Long</label>
        <scale>14</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>local_authority__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Local Authority</label>
        <referenceTo>Local_Authority__c</referenceTo>
        <relationshipLabel>Organisations</relationshipLabel>
        <relationshipName>organisations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>primary_contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organisations</relationshipLabel>
        <relationshipName>organisations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Organisation</label>
    <listViews>
        <fullName>Amy_Milliken_s_organisations</fullName>
        <columns>School_Id__c</columns>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>County__c</columns>
        <columns>Postcode__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Email__c</columns>
        <columns>Contact_Collection_finished__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>amill</value>
        </filters>
        <label>Amy Milliken&apos;s organisations</label>
        <sharedTo>
            <role>Head_of_Data_Executives</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ariel_Darling_s_organisations</fullName>
        <columns>School_Id__c</columns>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>County__c</columns>
        <columns>Postcode__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Email__c</columns>
        <columns>Contact_Collection_finished__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>adarl</value>
        </filters>
        <label>Ariel Darling&apos;s organisations</label>
        <sharedTo>
            <role>Head_of_Data_Executives</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assigned_Organisations</fullName>
        <columns>School_Id__c</columns>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>County__c</columns>
        <columns>Email__c</columns>
        <columns>Postcode__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Contact_Collection_finished__c</columns>
        <filterScope>Mine</filterScope>
        <label>My organisations assigned</label>
        <sharedTo>
            <roleAndSubordinates>Head_of_Data_Executives</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ellouise_Carter_s_organisations</fullName>
        <columns>School_Id__c</columns>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>County__c</columns>
        <columns>Postcode__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Email__c</columns>
        <columns>Contact_Collection_finished__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>ecart</value>
        </filters>
        <label>Ellouise Carter&apos;s organisations</label>
        <sharedTo>
            <role>Head_of_Data_Executives</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finished_Organisations</fullName>
        <columns>School_Id__c</columns>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>County__c</columns>
        <columns>Email__c</columns>
        <columns>Postcode__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Contact_Collection_finished__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Collection_finished__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Finished Organisations</label>
        <sharedTo>
            <role>Head_of_Data_Executives</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Hannah_Akhtar_s_organisations</fullName>
        <columns>School_Id__c</columns>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>County__c</columns>
        <columns>Postcode__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Email__c</columns>
        <columns>Contact_Collection_finished__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>hakht</value>
        </filters>
        <label>Hannah Akhtar&apos;s organisations</label>
        <sharedTo>
            <role>Head_of_Data_Executives</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Jack_Westall_s_organisations</fullName>
        <columns>School_Id__c</columns>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>County__c</columns>
        <columns>Postcode__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Email__c</columns>
        <columns>Contact_Collection_finished__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>jwest</value>
        </filters>
        <label>Jack Westall&apos;s organisations</label>
        <sharedTo>
            <role>Head_of_Data_Executives</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Joanne_Da_Silva_s_organisations</fullName>
        <columns>School_Id__c</columns>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>County__c</columns>
        <columns>Postcode__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Email__c</columns>
        <columns>Contact_Collection_finished__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>jda s</value>
        </filters>
        <label>Joanne Da Silva&apos;s organisations</label>
        <sharedTo>
            <role>Head_of_Data_Executives</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Natalia_Bulak_s_organisations</fullName>
        <columns>School_Id__c</columns>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>County__c</columns>
        <columns>Postcode__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Email__c</columns>
        <columns>Contact_Collection_finished__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>nbula</value>
        </filters>
        <label>Natalia Bulak&apos;s organisations</label>
        <sharedTo>
            <role>Head_of_Data_Executives</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sally_Hoang_s_organisations</fullName>
        <columns>School_Id__c</columns>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>County__c</columns>
        <columns>Postcode__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Email__c</columns>
        <columns>Contact_Collection_finished__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>shoan</value>
        </filters>
        <label>Sally Hoang&apos;s organisations</label>
        <sharedTo>
            <role>Head_of_Data_Executives</role>
        </sharedTo>
    </listViews>
</CustomObject>